--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-  "build": "vite build",
-  "preview": "vite preview",
+    "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint ."
-  }
- 
-,
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -23,6 +21,9 @@
     "@types/react-helmet": "^6.1.11",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
@@ -30,6 +31,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-i18next": "^16.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.1.0",
