update vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
-
 {
-    "REWRITES": [
-        { "source": "/(.*)", "destination": "/" }
-    ]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
