--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,6 @@ jobs:
           TAG=$(git rev-parse --short ${{ github.sha }})
           echo "TAG=$TAG" >> $GITHUB_ENV
           echo "TAG=$TAG" >> $GITHUB_OUTPUT
-          ls -l
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -55,6 +54,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+          build-args: |
+            VITE_API_BASE_URL=${{ secrets.VITE_API_BASE_URL }}
           cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
           cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
 
@@ -66,7 +67,7 @@ jobs:
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Deploy to Docker Compose
+      - name: Deploy using Docker Compose
         run: |
           cd /home/github-runner/pms_frontend
           echo "${{ secrets.PROD_ENV }}" > .env
@@ -75,24 +76,18 @@ jobs:
           sed -i "s|\(image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:\).*|\1${{ needs.build.outputs.image-tag }}|" docker-compose.yml
           docker compose up -d
 
-      # - name: Run database migrations
-      #   run: |
-      #     cd /home/github-runner
-      #     docker compose exec -T pms python manage.py makemigrations
-      #     docker compose exec -T pms python manage.py migrate
-
       - name: Cleanup old Docker images
         run: |
           KEEP=5  # number of latest images to keep
-          BACKEND_REPO=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          echo "🧹 Cleaning up old Docker images for $BACKEND_REPO, keeping $KEEP latest..."
+          FRONTEND_REPO=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          echo "🧹 Cleaning up old Docker images for $FRONTEND_REPO, keeping $KEEP latest..."
           # Remove dangling images for backend
-          docker images "$BACKEND_REPO" --filter "dangling=true" --quiet | xargs -r docker rmi || true
+          docker images "$FRONTEND_REPO" --filter "dangling=true" --quiet | xargs -r docker rmi || true
           # Sort images by creation date, keep the latest $KEEP, remove the rest
           docker images --format '{{.Repository}}:{{.Tag}} {{.CreatedAt}}' \
-              | grep "^$BACKEND_REPO" \
+              | grep "^$FRONTEND_REPO" \
               | sort -rk2 \
               | tail -n +$((KEEP+1)) \
               | awk '{print $1}' \
               | xargs -r docker rmi || true
-          echo "✅ Backend cleanup complete."
+          echo "✅ FRONTEND cleanup complete."
